diesel_compile_tests/tests/fail/check_message_for_to_many_columns.stderr
error: Table contains more than 16 columns. Consider enabling the `32-column-tables` feature to enable diesels support for tables with more than 16 columns.
  --> tests/fail/check_message_for_to_many_columns.rs:3:1
   |
3  | / table! {
4  | |     test_table(column_1) {
5  | |         column_1 -> Integer,
6  | |         column_2 -> Integer,
...  |
22 | |     }
23 | | }
   | |_^
   |
   = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
